# memmo_planner_ros

./: .gitignore  LICENSE  README.md
footstep_msgs/: CMakeLists.txt  package.xml
footstep_msgs/msg/: ConvexSurface.msg  FootPosition.msg  FootSurfaces.msg  FootstepTrajectory.msg  FootstepTrajectoryPoint.msg  GaitStatusOnNewPhase.msg  SetSurfaces.msg
footstep_msgs/srv/: Clearmap.srv
footstep_planner/: CMakeLists.txt  package.xml  setup.py
footstep_planner/scripts/footstep_planner/: main.py  walkgen.py
footstep_planner_ros/: CMakeLists.txt  package.xml  setup.py
footstep_planner_ros/launch/: footstep_planner.launch
footstep_planner_ros/scripts/footstep_planner_ros/: footstep_planner_node.py  main.py
memmo_teleop/: CMakeLists.txt  package.xml
memmo_teleop/config/: ps4.yaml
memmo_teleop/include/memmo_teleop/: memmo_teleop_joystick.hpp  memmo_teleop_keyboard.hpp
memmo_teleop/launch/: memmo_teleop_joystick.launch  memmo_teleop_keyboard.launch
memmo_teleop/src/: main_joystick.cpp  main_keyboard.cpp  memmo_teleop_joystick.cpp  memmo_teleop_keyboard.cpp
plane_publisher/: CMakeLists.txt  package.xml  setup.py
plane_publisher/config/: plane_publisher.yaml  plane_publisher_sim.yaml
plane_publisher/launch/: plane_publisher.launch  plane_publisher_sim.launch
plane_publisher/scripts/plane_publisher/: main.py  plane_publisher_node.py  plane_visualization.py
slim_ros/: CMakeLists.txt  package.xml  setup.py
slim_ros/launch/: slim.launch
slim_ros/scripts/slim_ros/: main_slim.py  slim_node.py
surface_planner/: CMakeLists.txt  package.xml  setup.py
surface_planner/scripts/surface_planner/: example_marker_array.pickle  main.py  slim.py  utils.py
surface_planner_integrated_ros/: CMakeLists.txt  package.xml  setup.py
surface_planner_integrated_ros/config/: surface_planner.yaml  surface_planner_sim.yaml
surface_planner_integrated_ros/launch/: surface_planner.launch  surface_planner_sim.launch
surface_planner_integrated_ros/scripts/surface_planner_integrated_ros/: footstep_visualization.py  main.py  surface_planner_node.py
surface_planner_ros/: CMakeLists.txt  package.xml  setup.py
surface_planner_ros/config/: surface_planner.yaml  surface_planner_sim.yaml
surface_planner_ros/launch/: surface_planner.launch  surface_planner_sim.launch
surface_planner_ros/scripts/surface_planner_ros/: Logger.py  elevation_map_interface.py  main.py  step_manager_interface.py  surface_planner_interface.py  surface_planner_node.py  walkgen_visualization.py  world_visualization.py
walkgen_ros/: CMakeLists.txt  package.xml  setup.py
walkgen_ros/launch/: walkgen.launch
walkgen_ros/scripts/walkgen_ros/: main_walkgen.py  walkgen_node.py
