<?xml version="1.0"?>
<package format="2">
  <name>footstep_planner</name>
  <version>0.0.0</version>
  <description>ROS package for footstep_planner</description>
  <maintainer email="jshim@ed.ac.uk">Jaehyun Shim</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/JaehyunShim/memmo_planner_ros</url>
  <author email="t.corberes@sms.ed.ac.uk">Thomas Corberes</author>
  <author email="jshim@ed.ac.uk">Jaehyun Shim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
