<?xml version="1.0"?>
<package format="2">
  <name>surface_planner_ros</name>
  <version>0.0.0</version>
  <description>ROS package for surface_planner_ros</description>
  <maintainer email="jshim@ed.ac.uk">Jaehyun Shim</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/JaehyunShim/memmo_planner_ros</url>
  <author email="jshim@ed.ac.uk">Jaehyun Shim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>footstep_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
